--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,13 @@
 	background: #f0f0f0;
 }
 
+.no-overflow {
+	max-width: 197px;
+	white-space: nowrap;
+	overflow: hidden;	
+	text-overflow: ellipsis;
+}
+
 #user-select {
 	border-radius: 0 .25rem .25rem 0;
 }
@@ -15,17 +22,13 @@
 	display: block;
 }
 
-.col-overflow {
-	white-space: nowrap;
-	text-overflow: ellipsis; 
-}
-
 .tags {
 	display: block;
 	margin-top: 10px;
 }
 .tags > .badge {
 	padding: 4px 6px;
+	margin: 2px; 
 }
 
 .problem-metadata > * {
@@ -34,11 +37,16 @@
 
 .close-issue {
 	padding-left: 0 !important;
-	margin-left: -4px;
+	margin-top: -1px;
+	margin-left: -2px;
 }
 
 .nav-item {
 	display: flex;
+}
+
+.fa-small {
+	font-size: 12px;
 }
 
 .green {
